syntax ="proto3";
import "google/protobuf/descriptor.proto";
package msg.protosupport.v1;
option go_package="github.com/iansmith/parigot/g/msg/protosupport/v1;protosupportmsg";

message IdRaw {
  uint64 high = 1;
  uint64 low = 2;
}

extend google.protobuf.EnumOptions {
  bool parigot_error = 543211;
}
